--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
                 </a>
                 <a class="apresentacao__links__link" href="https://github.com/FabioFunction/">
                     <img class="apresentacao__links__link__image" src="/assets/github.png" alt="GitHub Imagem">
-                    Linkedin
+                    GitHub
                 </a>
             </div>
         </section>
